--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="container">
 	<div class="card">
 		<div class="card-body">
-			<p><span class="text-primary"><b>Reposi3</span></b> is a Cydia repository template.</p>
+			<p><span class="text-primary"><b>i9repo</span></b> is a Cydia repository!</p>
 			<a class="btn btn-sm btn-primary" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://pixelsn0w.github.io/i9repo/">Add to Cydia</a>
 		</div>
 	</div>
